--- a/LoanManagementSystem/Views/AccountBooks/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Create.cshtml
@@ -30,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BookDescription, "", new { @class = "text-danger" })
             </div>
         </div>
