--- a/LoanManagementSystem/Views/Loan/Index.cshtml
+++ b/LoanManagementSystem/Views/Loan/Index.cshtml
@@ -3,17 +3,17 @@
 @{
     ViewBag.Title = "List Loans";
     Layout = "~/Views/Shared/_Layout.cshtml";
-} 
+}
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table bg-teal">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Member.Code)
+            @Html.DisplayName("Member")
         </th>
-        
+
         <th>
             @Html.DisplayNameFor(model => model.RequestedAmount)
         </th>
@@ -23,48 +23,41 @@
         <th>
             @Html.DisplayNameFor(model => model.LoanAmount)
         </th>
-        
+
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
-        
         <th>
-            @Html.DisplayNameFor(model => model.SanctionedDate)
+
         </th>
-        
-       
-        <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Member.Code)
-        </td>
-         
-        <td>
-            @Html.DisplayFor(modelItem => item.RequestedAmount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProposedAmount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LoanAmount)
-        </td>
-        
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-       
-        <td>
-            @Html.DisplayFor(modelItem => item.SanctionedDate)
-        </td> 
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.LoanId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.LoanId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.LoanId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.Label(item.Member.FirstName + " " + item.Member.LastName)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.RequestedAmount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProposedAmount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LoanAmount)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.LoanId }) |
+                @Html.ActionLink("Details", "Index", "LoanRepayments", new { LoanId = item.LoanId }, new { id = item.LoanId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.LoanId })
+            </td>
+        </tr>
+    }
 
 </table>
