--- a/LoanManagementSystem/Views/_ViewStart.cshtml
+++ b/LoanManagementSystem/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+@{
+    //if (!User.Identity.IsAuthenticated)
+    //{
+    //    RedirectResult("Login", "User");
+    //}
+}
